--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,32 +36,23 @@ jobs:
       - name: Build image
         run: docker build -t gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }} .
       - name: Setup Google Cloud
-        uses: actions/gcloud/auth@master
-        env:
-          GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+        run: |
+          curl https://sdk.cloud.google.com | bash && exec -l $SHELL
+          gcloud components install beta --quiet
+      - name: Authenticate Google Cloud
+        run: |
+          echo "$GCLOUD_AUTH" | base64 --decode > "$HOME"/service-account-key.json
+          gcloud auth activate-service-account --key-file=$HOME/service-account-key.json
       - name: Configure Docker to use Google Cloud Platform
-        uses: actions/gcloud/cli@master
-        with:
-          args: "auth configure-docker"
+        run: gcloud auth configure-docker"
       - name: Push image to registry
-        uses: actions/gcloud/cli@master
-        with:
-          entrypoint: sh
-          args: -c "docker push gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }}"
-      - name: Install Google Cloud beta commands
-        uses: actions/gcloud/cli@master
-        with:
-          args: components install beta --quiet
+        run: docker push gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }}"
       - name: Deploy image to the server
-        uses: actions/gcloud/cli@master
-        with:
-          args: "cloud beta run deploy ${{ secrets.GCLOUD_APP }} --quiet --image gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }} --project ${{ secrets.GCLOUD_PROJECT }} --region=us-east1 --platform managed"
+        run: gcloud cloud beta run deploy ${{ secrets.GCLOUD_APP }} --quiet --image gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }} --project ${{ secrets.GCLOUD_PROJECT }} --region=us-east1 --platform managed"
       - name: Clean CDN
         run: ./scripts/update-cdn
         env:
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
       - name: Clean previous images from registry
-        uses: actions/gcloud/cli@master
-        with:
-          entrypoint: ./scripts/clean-images
+        run: ./scripts/clean-images
