--- a/nginx.conf
+++ b/nginx.conf
@@ -89,6 +89,10 @@ http {
       add_header Cache-Control "public, max-age=86400, immutable";
     }
 
+    location = /service.js {
+      add_header Cache-Control "public, max-age=86400, immutable";
+    }
+
     location ~* "(\.png|\.ico|\.woff2)$" {
       add_header Content-Security-Policy "";
     }
