--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
     "rollup": "^1.27.5",
+    "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.1.2",
     "slugify": "^1.3.6",
     "spinnies": "^0.5.0",
