--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "podman build -t loguxio . && podman run -v ./dist/:/var/www/ --privileged --rm -p 8000:80 -e PORT=80 -it loguxio"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^2.2.1",
     "capitalize": "^2.0.1",
     "chalk": "^3.0.0",
     "del": "^5.1.0",
@@ -35,7 +36,7 @@
     "remark-html": "^10.0.0",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
-    "rollup": "^1.27.5",
+    "rollup": "^1.27.8",
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.1.2",
     "slugify": "^1.3.6",
@@ -52,17 +53,17 @@
     "@logux/sharec-config": "^0.5.6",
     "@size-limit/file": "^2.2.1",
     "del-cli": "^3.0.0",
-    "eslint": "^6.7.1",
+    "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.4.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.0",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^14.0.0",
+    "eslint-plugin-unicorn": "^14.0.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "stylelint": "^12.0.0",
@@ -107,7 +108,15 @@
     },
     "parserOptions": {
       "sourceType": "module"
-    }
+    },
+    "overrides": [
+      {
+        "files": "src/service.js",
+        "globals": {
+          "FILES": false
+        }
+      }
+    ]
   },
   "eslintIgnore": [
     "scripts/lib/dirs.js",
