--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "eslintConfig": {
     "extends": "@logux/eslint-config/node",
     "rules": {
+      "security/detect-unsafe-regex": "off",
       "node/no-unpublished-require": "off"
     },
     "parserOptions": {
