Fix caching for cachebusterless resources

--- a/nginx.conf
+++ b/nginx.conf
@@ -82,15 +82,15 @@ http {
     }
 
     location = /logo.svg {
-      add_header Cache-Control "public, max-age=86400, immutable";
+      add_header Cache-Control "public, max-age=86400";
     }
 
     location = /logotype.svg {
-      add_header Cache-Control "public, max-age=86400, immutable";
+      add_header Cache-Control "public, max-age=86400";
     }
 
     location = /service.js {
-      add_header Cache-Control "public, max-age=86400, immutable";
+      add_header Cache-Control "public, max-age=60";
     }
 
     location ~* "(\.png|\.ico|\.woff2)$" {
