--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,3 +60,21 @@ jobs:
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
       - name: Clean previous images from registry
         run: ./scripts/clean-images
+  audit:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Install Node.js
+        uses: actions/setup-node@master
+      - name: Audit website
+        uses: treosh/lighthouse-ci-action@v2
+        with:
+          temporaryPublicStorage: true
+          url: |
+            https://logux.io/guide/architecture/core/
+            https://logux.io/uikit
+      - name: Save results
+        uses: actions/upload-artifact@v1
+        with:
+          name: lighthouse-results
+          path: '.lighthouseci'
