--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@master
+        with:
+          fetch-depth: 1
       - name: Warm CDN
         run: wget --page-requisites https://logux.io
       - name: Audit website
