--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,8 +74,7 @@ jobs:
         uses: treosh/lighthouse-ci-action@v2
         with:
           configPath: ./lighthouserc.json
-          urls: |
-            https://logux.io/
+          urls: https://logux.io/guide/architecture/core/
       - name: Save results
         uses: actions/upload-artifact@v1
         with:
