--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "del": "^5.1.0",
     "documentation": "^12.1.4",
     "globby": "^10.0.1",
+    "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^1.13.0",
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
