--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.24",
+    "postcss-combine-media-query": "^1.0.0",
     "postcss-hexrgba": "^2.0.0",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.3",
