--- a/scripts/build
+++ b/scripts/build
@@ -4,13 +4,13 @@ import chalk from 'chalk'
 
 import generateWebManifest from './steps/generate-web-manifest.js'
 import downloadProject from './steps/download-project.js'
-import findFilesInCSS from './steps/find-files-in-css.js'
 import cleanBuildDir from './steps/clean-build-dir.js'
 import copyWellKnown from './steps/copy-well-known.js'
 import compressFiles from './steps/compress-files.js'
 import compileAssets from './steps/compile-assets.js'
 import repackScripts from './steps/repack-scripts.js'
 import getChatUsers from './steps/get-chat-users.js'
+import repackStyles from './steps/repack-styles.js'
 import createLayout from './steps/create-layout.js'
 import updateHtml from './steps/update-html.js'
 import buildDocs from './steps/build-docs.js'
@@ -23,7 +23,7 @@ async function prepareHtml () {
   let assets = await compileAssets()
   let [webmanifest, filesFromCSS] = await Promise.all([
     generateWebManifest(assets),
-    findFilesInCSS(assets),
+    repackStyles(assets),
     copyWellKnown(assets)
   ])
   let uikit = await updateHtml(assets, webmanifest, filesFromCSS)
