Fix number of runs in Lighthouse CI for more stable audit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Audit website
         uses: treosh/lighthouse-ci-action@master
         with:
+          runs: 3
           temporaryPublicStorage: true
           configPath: ./lighthouserc.json
       - name: Save results
