Avoid using master for GitHub actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
       - name: Install Node.js
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v1
         with:
           node-version: '>=13.2'
       - name: Get Yarn cache
@@ -66,13 +66,13 @@ jobs:
     needs: deploy
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
       - name: Warm CDN
         run: wget --page-requisites https://logux.io
       - name: Audit website
-        uses: treosh/lighthouse-ci-action@master
+        uses: treosh/lighthouse-ci-action@v2
         with:
           runs: 3
           temporaryPublicStorage: true
