Move logos to branding/

--- a/nginx.conf
+++ b/nginx.conf
@@ -81,11 +81,7 @@ http {
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    location = /logo.svg {
-      add_header Cache-Control "public, max-age=86400";
-    }
-
-    location = /logotype.svg {
+    location ~* "^/branding/.*.svg$" {
       add_header Cache-Control "public, max-age=86400";
     }
 
