--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-nested": "^4.2.1",
     "postcss-url": "^8.0.0",
     "pug": "^2.0.4",
+    "recursive-copy": "^2.0.10",
     "rehype-parse": "^6.0.2",
     "rehype-raw": "^4.0.1",
     "rehype-stringify": "^6.0.1",
@@ -173,8 +174,6 @@
         "dist/*.js",
         "dist/*.css",
         "!dist/service.js",
-        "!dist/logo.svg",
-        "!dist/logotype.svg",
         "!dist/open.*.svg",
         "!dist/close.*.svg",
         "!dist/chat.*.svg",
