--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,31 +36,15 @@ jobs:
           CI: 1
           GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
           GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
-      - name: Build image
-        run: docker build -f ./scripts/deploy/Dockerfile -t gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }} .
-      - name: Setup Google Cloud
-        run: |
-          curl https://sdk.cloud.google.com | bash && exec -l $SHELL
-          gcloud components install beta --quiet
-      - name: Authenticate Google Cloud
-        run: |
-          echo "$GCLOUD_AUTH" | base64 --decode > "$HOME"/service-account-key.json
-          gcloud auth activate-service-account --key-file=$HOME/service-account-key.json
+      - name: Deploy files
+        run: yarn run ssdeploy deploy
         env:
+          GCLOUD_APP: loguxio
           GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-      - name: Configure Docker to use Google Cloud
-        run: gcloud auth configure-docker
-      - name: Push image to registry
-        run: docker push gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }}
-      - name: Deploy image to the server
-        run: gcloud beta run deploy ${{ secrets.GCLOUD_APP }} --quiet --image gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP }} --project ${{ secrets.GCLOUD_PROJECT }} --region=us-east1 --platform managed
-      - name: Clean CDN
-        run: ./scripts/clean-cdn.js
-        env:
+          GCLOUD_PROJECT: logux-255417
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-      - name: Clean previous images from registry
-        run: ./scripts/clean-images
+
   audit:
     runs-on: ubuntu-latest
     needs: deploy
