--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "lint": "eslint . && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build && size-limit",
     "clean": "del-cli dist/ .cache",
-    "build": "NODE_ENV=production ./scripts/build.js",
-    "nginx": "podman build -f ./scripts/deploy/Dockerfile -t loguxio . && podman run -v ./dist/:/var/www/ --privileged --rm -p 8000:80 -e PORT=80 -it loguxio"
+    "build": "NODE_ENV=production ./scripts/build.js"
   },
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.0",
@@ -42,6 +41,7 @@
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.1.3",
     "slugify": "^1.3.6",
+    "solid-state-deploy": "ai/solid-state-deploy",
     "spinnies": "^0.5.1",
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
