--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.1.3",
     "slugify": "^1.3.6",
-    "solid-state-deploy": "ai/solid-state-deploy",
+    "solid-state-deploy": "^0.1.0",
     "spinnies": "^0.5.1",
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
