--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.1.3",
     "slugify": "^1.3.6",
-    "solid-state-deploy": "^0.1.0",
     "spinnies": "^0.5.1",
+    "ssdeploy": "^0.2.0",
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
     "unist-util-filter": "^2.0.1",
