--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '>=13.2'
+          node-version: '13.5.0'
       - name: Get Yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
