Update lint-staged config

--- a/package.json
+++ b/package.json
@@ -139,10 +139,7 @@
   },
   "lint-staged": {
     "*.js": "eslint",
-    "*.svg": [
-      "svgo",
-      "git add"
-    ],
+    "*.svg": "svgo",
     "*.sss": "stylelint --fix"
   },
   "size-limit": [
