--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "NODE_ENV=production ./scripts/build.js"
   },
   "dependencies": {
-    "@rollup/plugin-replace": "^2.3.0",
+    "@rollup/plugin-replace": "^2.3.1",
     "capitalize": "^2.0.1",
     "chalk": "^3.0.0",
     "del": "^5.1.0",
@@ -25,7 +25,7 @@
     "postcss-hexrgba": "^2.0.0",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-momentum-scrolling": "^2.2.9",
+    "postcss-momentum-scrolling": "^2.3.10",
     "postcss-nested": "^4.2.1",
     "postcss-url": "^8.0.0",
     "pug": "^2.0.4",
@@ -38,7 +38,7 @@
     "remark-html": "^10.0.0",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
-    "rollup": "^1.29.1",
+    "rollup": "^1.31.0",
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.2.0",
     "slugify": "^1.3.6",
@@ -52,24 +52,25 @@
     "unzipper": "^0.10.7"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^35.0.3",
-    "@logux/sharec-config": "^0.5.6",
+    "@logux/eslint-config": "^35.0.4",
+    "@logux/sharec-config": "^0.5.7",
     "@logux/stylelint-config": "^0.1.2",
-    "@size-limit/file": "^3.0.0",
+    "@size-limit/file": "^4.0.0",
     "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-es5": "^1.4.1",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-es5": "^1.5.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^15.0.1",
+    "eslint-plugin-unicorn": "^16.0.0",
     "husky": "^4.2.1",
-    "lint-staged": "^10.0.2",
+    "lint-staged": "^10.0.7",
+    "size-limit": "^4.0.0",
     "stylelint": "^13.0.0",
     "stylelint-config-recess-order": "^2.0.3",
     "stylelint-config-standard": "^19.0.0",
@@ -165,6 +166,6 @@
   ],
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.5.6"
+    "version": "0.5.7"
   }
 }
