--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.1",
-    "capitalize": "^2.0.1",
+    "capitalize": "^2.0.2",
     "chalk": "^3.0.0",
     "del": "^5.1.0",
     "documentation": "^12.1.4",
@@ -18,14 +18,14 @@
     "globby": "^11.0.0",
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^1.13.1",
-    "make-dir": "^3.0.0",
+    "make-dir": "^3.0.2",
     "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.26",
     "postcss-combine-media-query": "^1.0.0",
     "postcss-hexrgba": "^2.0.0",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-momentum-scrolling": "^2.3.12",
+    "postcss-momentum-scrolling": "^2.3.14",
     "postcss-nested": "^4.2.1",
     "postcss-url": "^8.0.0",
     "pug": "^2.0.4",
@@ -38,7 +38,7 @@
     "remark-html": "^10.0.0",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^5.0.0",
-    "rollup": "^1.31.0",
+    "rollup": "^1.31.1",
     "rollup-plugin-inject-process-env": "^1.1.0",
     "rollup-plugin-terser": "^5.2.0",
     "slugify": "^1.3.6",
@@ -46,34 +46,34 @@
     "ssdeploy": "^0.6.10",
     "sugarss": "^2.0.0",
     "unified": "^8.4.2",
-    "unist-util-filter": "^2.0.1",
+    "unist-util-filter": "^2.0.2",
     "unist-util-flatmap": "^1.0.0",
-    "unist-util-visit": "^2.0.1",
-    "unzipper": "^0.10.7"
+    "unist-util-visit": "^2.0.2",
+    "unzipper": "^0.10.8"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^35.0.4",
+    "@logux/eslint-config": "^36.0.0",
     "@logux/sharec-config": "^0.5.7",
     "@logux/stylelint-config": "^0.1.2",
-    "@size-limit/file": "^4.0.0",
+    "@size-limit/file": "^4.0.1",
     "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^16.0.0",
-    "husky": "^4.2.1",
+    "eslint-plugin-unicorn": "^16.1.1",
+    "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
-    "size-limit": "^4.0.0",
-    "stylelint": "^13.0.0",
+    "size-limit": "^4.0.1",
+    "stylelint": "^13.2.0",
     "stylelint-config-recess-order": "^2.0.3",
-    "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
     "svgo": "^1.3.2"
   },
@@ -108,7 +108,7 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config/node",
+    "extends": "@logux/eslint-config",
     "rules": {
       "security/detect-unsafe-regex": "off",
       "node/no-unpublished-require": "off"
