--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "NODE_ENV=production ./scripts/build.js"
   },
   "dependencies": {
-    "@rollup/plugin-replace": "^2.3.1",
+    "@babel/core": "^7.9.0",
+    "@rollup/plugin-replace": "^2.3.2",
     "capitalize": "^2.0.3",
     "chalk": "^4.0.0",
     "del": "^5.1.0",
@@ -36,10 +37,10 @@
     "remark": "^12.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^11.0.1",
-    "remark-parse": "^8.0.0",
+    "remark-parse": "^8.0.1",
     "remark-rehype": "^6.0.0",
     "rollup": "^2.6.1",
-    "rollup-plugin-inject-process-env": "^1.1.0",
+    "rollup-plugin-inject-process-env": "^1.2.0",
     "rollup-plugin-terser": "^5.3.0",
     "slugify": "^1.4.0",
     "spinnies": "^0.5.1",
@@ -50,7 +51,7 @@
     "unist-util-filter": "^2.0.2",
     "unist-util-flatmap": "^1.0.0",
     "unist-util-visit": "^2.0.2",
-    "unzipper": "^0.10.10"
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
     "@logux/eslint-config": "^36.1.2",
@@ -70,7 +71,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^18.0.1",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.3",
+    "lint-staged": "^10.1.6",
     "size-limit": "^4.4.5",
     "stylelint": "^13.3.2",
     "stylelint-config-recess-order": "^2.0.4",
