--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^1.13.1",
     "make-dir": "^3.1.0",
-    "nanoevents": "^5.1.5",
+    "nanoevents": "^5.1.7",
     "parcel-bundler": "^1.12.4",
-    "postcss": "^7.0.28",
+    "postcss": "^7.0.30",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.0",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-momentum-scrolling": "^2.5.17",
+    "postcss-momentum-scrolling": "^2.6.17",
     "postcss-nested": "^4.2.1",
     "postcss-url": "^8.0.0",
     "pug": "^2.0.4",
@@ -36,17 +36,18 @@
     "rehype-stringify": "^7.0.0",
     "remark": "^12.0.0",
     "remark-highlight.js": "^6.0.0",
-    "remark-html": "^11.0.1",
+    "remark-html": "^11.0.2",
     "remark-parse": "^8.0.2",
-    "remark-rehype": "^6.0.0",
-    "rollup": "^2.7.6",
+    "remark-rehype": "^7.0.0",
+    "rollup": "^2.10.8",
     "rollup-plugin-inject-process-env": "^1.2.0",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-terser": "^6.0.1",
     "slugify": "^1.4.0",
     "spinnies": "^0.5.1",
-    "ssdeploy": "^0.6.11",
+    "ssdeploy": "^0.6.12",
     "sugarss": "^2.0.0",
-    "typedoc": "^0.17.6",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.3",
     "unified": "^9.0.0",
     "unist-util-filter": "^2.0.2",
     "unist-util-flatmap": "^1.0.0",
@@ -54,31 +55,31 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^36.1.3",
-    "@logux/sharec-config": "^0.6.4",
+    "@logux/eslint-config": "^39.0.3",
+    "@logux/sharec-config": "^0.7.3",
     "@logux/stylelint-config": "^0.1.3",
-    "@size-limit/file": "^4.4.5",
-    "del-cli": "^3.0.0",
-    "eslint": "^6.8.0",
+    "@size-limit/file": "^4.5.0",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.0.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.0.1",
+    "eslint-plugin-prettierx": "^0.12.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^19.0.1",
+    "eslint-plugin-unicorn": "^20.0.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
-    "size-limit": "^4.4.5",
-    "stylelint": "^13.3.3",
+    "lint-staged": "^10.2.6",
+    "size-limit": "^4.5.0",
+    "stylelint": "^13.5.0",
     "stylelint-config-recess-order": "^2.0.4",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
-    "svgo": "^1.3.2",
-    "typescript": "^3.8.3"
+    "svgo": "^1.3.2"
   },
   "repository": "logux/logux.io",
   "homepage": "https://logux.io/",
@@ -141,7 +142,7 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint",
+    "*.js": "eslint --fix",
     "*.svg": "svgo",
     "*.sss": "stylelint --fix"
   },
@@ -168,6 +169,6 @@
   ],
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.6.4"
+    "version": "0.7.3"
   }
 }
