--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,13 @@ jobs:
           restore-keys: yarn-production-
       - name: Install build dependencies
         run: yarn install --production
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - name: Install PyPI
+        run: |
+          python -m pip install --upgrade pip
       - name: Build static files
         run: yarn build
         env:
