--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: yarn-production-${{ hashFiles('**/yarn.lock') }}
           restore-keys: yarn-production-
-      - name: Install build dependencies
+      - name: Install Node.js dependencies
         run: yarn install --production
       - name: Install Python
         uses: actions/setup-python@v2
