--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@rollup/plugin-replace": "^2.3.3",
     "autoprefixer": "^9.8.4",
     "capitalize": "^2.0.3",
+    "colorette": "^1.2.0",
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "globby": "^11.0.1",
     "jstransformer-lowlight": "^0.1.0",
-    "kleur": "^4.0.1",
     "lowlight": "^1.14.0",
     "make-dir": "^3.1.0",
     "nanoevents": "^5.1.8",
