--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "NODE_ENV=production ./scripts/build.js"
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@babel/core": "^7.12.3",
+    "@rollup/plugin-replace": "^2.3.4",
     "autoprefixer": "^9.8.6",
     "capitalize": "^2.0.3",
     "colorette": "^1.2.1",
@@ -18,9 +18,9 @@
     "dotenv": "^8.2.0",
     "globby": "^11.0.1",
     "jstransformer-lowlight": "^0.1.0",
-    "lowlight": "^1.15.0",
+    "lowlight": "^1.16.0",
     "make-dir": "^3.1.0",
-    "nanoevents": "^5.1.8",
+    "nanoevents": "^5.1.10",
     "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.32",
     "postcss-combine-media-query": "^1.0.1",
@@ -35,12 +35,12 @@
     "rehype-parse": "^7.0.1",
     "rehype-raw": "^5.0.0",
     "rehype-stringify": "^8.0.0",
-    "remark": "^12.0.1",
+    "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
-    "remark-parse": "^8.0.3",
+    "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
-    "rollup": "^2.28.2",
+    "rollup": "^2.32.1",
     "rollup-plugin-inject-process-env": "^1.3.0",
     "rollup-plugin-terser": "^7.0.2",
     "slugify": "^1.4.5",
@@ -48,7 +48,7 @@
     "ssdeploy": "^0.6.17",
     "sugarss": "^2.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "unified": "^9.2.0",
     "unist-util-filter": "^2.0.2",
     "unist-util-flatmap": "^1.0.0",
@@ -56,13 +56,13 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^40.0.5",
-    "@logux/sharec-config": "^0.7.4",
+    "@logux/eslint-config": "^41.0.2",
+    "@logux/sharec-config": "^0.7.9",
     "@logux/stylelint-config": "^0.1.3",
-    "@size-limit/file": "^4.6.0",
+    "@size-limit/file": "^4.6.2",
     "del-cli": "^3.0.1",
-    "eslint": "^7.10.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^15.0.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
@@ -71,13 +71,13 @@
     "eslint-plugin-prettierx": "^0.14.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^22.0.0",
+    "eslint-plugin-standard": "^4.0.2",
+    "eslint-plugin-unicorn": "^23.0.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "size-limit": "^4.6.0",
+    "lint-staged": "^10.5.0",
+    "size-limit": "^4.6.2",
     "stylelint": "^13.7.2",
-    "stylelint-config-recess-order": "^2.1.0",
+    "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "svgo": "^1.3.2"
@@ -115,7 +115,8 @@
     "extends": "@logux/eslint-config",
     "rules": {
       "security/detect-unsafe-regex": "off",
-      "node/no-unpublished-require": "off"
+      "node/no-unpublished-require": "off",
+      "no-loop-func": "off"
     },
     "parserOptions": {
       "sourceType": "module"
@@ -170,6 +171,6 @@
   ],
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.7.4"
+    "version": "0.7.9"
   }
 }
