--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,9 @@
 name: Test
-
 on:
   push:
   pull_request:
-
 env:
   FORCE_COLOR: 2
-
 jobs:
   build:
     name: Test
@@ -21,7 +18,7 @@ jobs:
         with:
           node-version: '14'
       - name: Install all dependencies
-        run: yarn install
+        uses: bahmutov/npm-install@v1
       - name: Build and test
         run: yarn test
         env:
