--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,11 @@
 name: Deploy
-
 on:
   push:
     branches:
-      - master
+      - main
   repository_dispatch:
-
 env:
   FORCE_COLOR: 2
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
