--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "logux.io",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "start": "parcel serve src/uikit.pug --open",
     "lint": "eslint . && stylelint src/**/*.sss",
@@ -48,7 +52,7 @@
     "spinnies": "^0.5.1",
     "ssdeploy": "^0.6.19",
     "sugarss": "^2.0.0",
-    "typedoc": "^0.20.35",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4",
     "unified": "^9.2.1",
     "unist-util-filter": "^3.0.0",
@@ -57,12 +61,12 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^45.2.3",
+    "@logux/eslint-config": "^45.4.1",
     "@logux/sharec-config": "^0.10.1",
     "@logux/stylelint-config": "^0.3.1",
     "@size-limit/file": "^4.10.2",
     "del-cli": "^3.0.1",
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.5",
@@ -70,13 +74,13 @@
     "eslint-plugin-prefer-let": "^1.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^30.0.0",
+    "eslint-plugin-unicorn": "^31.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "serve": "^11.3.2",
-    "simple-git-hooks": "^2.3.1",
+    "simple-git-hooks": "^2.4.1",
     "size-limit": "^4.10.2",
-    "stylelint": "^13.12.0",
+    "stylelint": "^13.13.0",
     "svgo": "^2.3.0"
   },
   "repository": "logux/logux.io",
@@ -92,10 +96,6 @@
     "not and_qq > 0",
     "not android > 0"
   ],
-  "type": "module",
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "postcss": {
     "plugins": {
       "postcss-mixins": {
@@ -139,7 +139,7 @@
     ".cache"
   ],
   "stylelint": {
-    "extends": "@logux/stylelint-config"
+    "extends": "@logux/stylelint-config/esm"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
@@ -178,7 +178,7 @@
         "!dist/lurkers-dark.*.svg",
         "!dist/logotype-dark.*.svg"
       ],
-      "limit": "17 KB"
+      "limit": "16 KB"
     }
   ],
   "sharec": {
