--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@logux/sharec-config": "^0.10.1",
     "@logux/stylelint-config": "^0.3.1",
     "@size-limit/file": "^4.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "del-cli": "^3.0.1",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
@@ -109,7 +111,7 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config",
+    "extends": "@logux/eslint-config/esm",
     "rules": {
       "security/detect-unsafe-regex": "off",
       "node/no-unpublished-require": "off",
@@ -139,7 +141,7 @@
     ".cache"
   ],
   "stylelint": {
-    "extends": "@logux/stylelint-config/esm"
+    "extends": "@logux/stylelint-config"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
