--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "start": "parcel serve src/uikit.pug --open",
     "lint": "eslint . && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build && size-limit",
-    "clean": "del-cli dist/ .cache/",
+    "clean": "del-cli dist/ .parcel-cache/",
     "build": "NODE_ENV=production ./scripts/build.js",
     "start:build": "serve dist/"
   },
   "dependencies": {
     "@babel/core": "^7.13.16",
-    "@rollup/plugin-replace": "^2.4.2",
-    "autoprefixer": "^9.8.6",
+    "@parcel/optimizer-cssnano": "^2.0.0-nightly.643",
+    "@parcel/optimizer-htmlnano": "^2.0.0-nightly.643",
+    "@parcel/packager-css": "^2.0.0-nightly.643",
+    "@parcel/packager-html": "^2.0.0-nightly.643",
+    "@parcel/transformer-css": "^2.0.0-nightly.643",
+    "@parcel/transformer-html": "^2.0.0-nightly.643",
+    "@parcel/transformer-postcss": "^2.0.0-nightly.643",
+    "@parcel/transformer-posthtml": "^2.0.0-nightly.643",
+    "@parcel/transformer-pug": "^2.0.0-nightly.643",
+    "@parcel/transformer-sugarss": "^2.0.0-nightly.643",
+    "autoprefixer": "^10.2.5",
     "capitalize": "^2.0.3",
     "colorette": "^1.2.2",
     "del": "^6.0.0",
@@ -25,16 +34,16 @@
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^1.20.0",
     "make-dir": "^3.1.0",
-    "nanoevents": "^5.1.13",
-    "parcel-bundler": "^1.12.5",
-    "postcss": "^7.0.32",
+    "nanoevents": "^6.0.0",
+    "parcel": "^2.0.0-nightly.643",
+    "postcss": "^8.2.12",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.1",
-    "postcss-media-minmax": "^4.0.0",
-    "postcss-mixins": "^6.2.3",
-    "postcss-momentum-scrolling": "^2.8.20",
-    "postcss-nested": "^4.2.3",
-    "postcss-url": "^8.0.0",
+    "postcss-media-minmax": "^5.0.0",
+    "postcss-mixins": "^7.0.3",
+    "postcss-momentum-scrolling": "^3.10.19",
+    "postcss-nested": "^5.0.5",
+    "postcss-url": "^10.1.3",
     "pug": "^3.0.2",
     "recursive-copy": "^2.0.11",
     "rehype-parse": "^7.0.1",
@@ -45,13 +54,10 @@
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.1.0",
-    "rollup": "^2.45.2",
-    "rollup-plugin-inject-process-env": "^1.3.1",
-    "rollup-plugin-terser": "^7.0.2",
     "slugify": "^1.5.0",
     "spinnies": "^0.5.1",
     "ssdeploy": "^0.6.19",
-    "sugarss": "^2.0.0",
+    "sugarss": "^3.0.3",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4",
     "unified": "^9.2.1",
@@ -138,7 +144,7 @@
   "eslintIgnore": [
     "scripts/lib/dirs.js",
     "dist",
-    ".cache"
+    ".parcel-cache"
   ],
   "stylelint": {
     "extends": "@logux/stylelint-config"
