--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "parcel serve src/uikit.pug --open",
     "lint": "eslint . && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build && size-limit",
-    "clean": "rm -R dist/ .parcel-cache/",
+    "clean": "rm -Rf dist/ .parcel-cache/",
     "build": "NODE_ENV=production ./scripts/build.js",
     "start:build": "serve dist/"
   },
