--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
-    "@parcel/optimizer-cssnano": "^2.0.0-nightly.643",
-    "@parcel/optimizer-htmlnano": "^2.0.0-nightly.643",
-    "@parcel/packager-css": "^2.0.0-nightly.643",
-    "@parcel/packager-html": "^2.0.0-nightly.643",
-    "@parcel/transformer-css": "^2.0.0-nightly.643",
-    "@parcel/transformer-html": "^2.0.0-nightly.643",
-    "@parcel/transformer-postcss": "^2.0.0-nightly.643",
-    "@parcel/transformer-posthtml": "^2.0.0-nightly.643",
-    "@parcel/transformer-pug": "^2.0.0-nightly.643",
-    "@parcel/transformer-sugarss": "^2.0.0-nightly.643",
-    "autoprefixer": "^10.2.5",
+    "@parcel/optimizer-cssnano": "2.0.0-beta.2",
+    "@parcel/optimizer-htmlnano": "2.0.0-beta.2",
+    "@parcel/packager-css": "2.0.0-beta.2",
+    "@parcel/packager-html": "2.0.0-beta.2",
+    "@parcel/transformer-css": "2.0.0-beta.2",
+    "@parcel/transformer-html": "2.0.0-beta.2",
+    "@parcel/transformer-postcss": "2.0.0-beta.2",
+    "@parcel/transformer-posthtml": "2.0.0-beta.2",
+    "@parcel/transformer-pug": "2.0.0-beta.2",
+    "@parcel/transformer-sugarss": "2.0.0-beta.2",
+    "autoprefixer": "^10.2.6",
     "capitalize": "^2.0.3",
     "colorette": "^1.2.2",
     "del": "^6.0.0",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "globby": "^11.0.3",
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^1.20.0",
     "make-dir": "^3.1.0",
     "nanoevents": "^6.0.0",
-    "parcel": "^2.0.0-nightly.643",
+    "parcel": "^2.0.0-beta.2",
     "postcss": "^8.3.0",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.1",
@@ -58,7 +58,7 @@
     "ssdeploy": "^0.6.20",
     "sugarss": "^3.0.3",
     "typedoc": "^0.20.36",
-    "typescript": "^4.2.4",
+    "typescript": "~4.2.4",
     "unified": "^9.2.1",
     "unist-util-filter": "^3.0.0",
     "unist-util-flatmap": "^1.0.0",
@@ -69,12 +69,12 @@
     "@logux/eslint-config": "^45.4.3",
     "@logux/sharec-config": "^0.10.2",
     "@logux/stylelint-config": "^0.3.1",
-    "@size-limit/file": "^4.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "eslint": "^7.26.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.23.2",
+    "@size-limit/file": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
@@ -85,7 +85,7 @@
     "prettier": "^2.3.0",
     "serve": "^11.3.2",
     "simple-git-hooks": "^2.4.1",
-    "size-limit": "^4.10.3",
+    "size-limit": "^4.11.0",
     "stylelint": "^13.13.1",
     "svgo": "^2.3.0"
   },
