Replace colorette to nanocolores

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@parcel/transformer-sugarss": "2.0.0-beta.2",
     "autoprefixer": "^10.3.1",
     "capitalize": "^2.0.3",
-    "colorette": "^1.2.2",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
     "globby": "^12.0.0",
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^2.1.0",
     "make-dir": "^3.1.0",
+    "nanocolors": "^0.1.12",
     "nanoevents": "^6.0.0",
     "parcel": "2.0.0-beta.2",
     "postcss": "^8.3.6",
