--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^2.2.1",
     "make-dir": "^3.1.0",
-    "nanocolors": "^0.1.12",
     "nanoevents": "^6.0.1",
     "parcel": "2.0.0-beta.2",
+    "picocolors": "^0.2.1",
     "postcss": "^8.3.7",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.1",
